// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (--config-format) uses the name format 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (--config-format) uses the name format 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--config-format) uses the plugin-colon-prefix-name format 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`plugin:test/all\` configuration.\\
✅ Set in the \`plugin:test/recommended\` configuration.\\
🎨 Set in the \`plugin:test/style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (--config-format) uses the plugin-colon-prefix-name format 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`plugin:test/all\`, ✅ \`plugin:test/recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--config-format) uses the prefix-name format 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`test/all\` configuration.\\
✅ Set in the \`test/recommended\` configuration.\\
🎨 Set in the \`test/style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (--config-format) uses the prefix-name format 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`test/all\`, ✅ \`test/recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details

details

## Options

optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;
